kustomize/overlays/prod/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: prod
    app: mern-stack
