kustomize/overlays/prod/app-patches.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: backend
          image: atkaridarshan04/bookstore-backend  # Tag managed by Kustomize images

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          image: atkaridarshan04/bookstore-frontend  # Tag managed by Kustomize images
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15 

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - name: http-patched
      port: 80
      targetPort: 80
      protocol: TCP
